Fixed mobilenav z-indexing

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -348,7 +348,8 @@ html {
 .mobile-nav {
 	position: fixed;
 	bottom: 0;
-	width: 100%
+	width: 100%;
+	z-index: 4;
 }
 
 .mobile-nav-container {
